--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -92,9 +92,7 @@ jobs:
     - name: read upload url
       id: read_upload_url
       shell: bash
-      run: |
-        cat UPLOAD_URL.txt
-        echo ::set-output name=UPLOAD_URL::$( cat UPLOAD_URL.txt )
+      run: echo ::set-output name=UPLOAD_URL::$( cat UPLOAD_URL.txt )
 
     - name: Upload Release Asset
       id: upload-release-asset
@@ -149,9 +147,7 @@ jobs:
     - name: read upload url
       id: read_upload_url
       shell: bash
-      run: |
-        cat UPLOAD_URL.txt
-        echo ::set-output name=UPLOAD_URL::$( cat UPLOAD_URL.txt )
+      run: echo ::set-output name=UPLOAD_URL::$( cat UPLOAD_URL.txt )
 
     - name: Upload Release Asset
       id: upload-release-asset
