--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -58,9 +58,12 @@ jobs:
 # end job "preliminary-steps"
 # start job "normal-build"
   normal-build:
-    name: "[packages:@ubuntu-20.04]"
+    name: "[packages:@${{ matrix.os }}]"
     needs: [preliminary-steps]
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+    matrix:
+      os: [ubuntu-18.04, ubuntu-20.04]
     steps:
 
     - name: install deps
@@ -112,7 +115,7 @@ jobs:
       fail-fast: false
       matrix:
         docker_image:
-          - "ubuntu:bionic"
+#          - "ubuntu:bionic"
           - "debian:buster"
     container:
       image: ${{ matrix.docker_image }}
