--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -4,8 +4,8 @@ on:
   push:
     tags:
     - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-    branches:
-      - master
+    # branches:
+    #   - master
 
 jobs:
 # start job "preliminary-steps"
