fix on delete artifact

--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -164,6 +164,7 @@ jobs:
 # start job "Cleanup-steps"
   cleanup-steps:
     name: "Cleanup"
+    needs: [docker-build]
     runs-on: ubuntu-latest
 
     steps:
