added scripts and conf files to address gazebo simulation

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory(iKinGazeCtrl)
 add_subdirectory(faceExpressions)
 add_subdirectory(objectsPropertiesCollector)
 add_subdirectory(simCartesianControl)
+add_subdirectory(gazeboCartesianControl)
 add_subdirectory(robotScripting)
 add_subdirectory(skinGui)
 add_subdirectory(wholeBodyDynamics)
