[gazebo] fixed camera's intrinsic parameters
cc @xenvre

--- a/app/gazeboCartesianControl/conf/iKinGazeCtrl.ini
+++ b/app/gazeboCartesianControl/conf/iKinGazeCtrl.ini
@@ -4,7 +4,7 @@ neck_position_control on
 saccades              off
 
 [cameras]
-context   cameraCalibration
+context   gazeboCartesianControl
 file      icubSimEyes.ini
 
 [imu]
