--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,9 +42,8 @@ jobs:
         latest_tag=$(curl --silent https://api.github.com/repos/robotology/robotology-superbuild-dependencies-vcpkg/releases/latest | grep '"tag_name"' | sed -E 's/.*"([^"]+)".*/\1/')
         echo "Installing robotology-superbuild-dependencies-vcpkg@${latest_tag}"
         cd C:/
-        mkdir -p C:/robotology/vcpkg
         wget https://github.com/robotology/robotology-superbuild-dependencies-vcpkg/releases/download/${latest_tag}/vcpkg-robotology.zip
-        unzip vcpkg-robotology.zip -d C:/robotology/vcpkg
+        unzip vcpkg-robotology.zip -d C:/
         echo "VCPKG_INSTALLATION_ROOT=C:/robotology/vcpkg" >> ${GITHUB_ENV}
         
     - name: Dependencies [macOS]
