--- a/src/tools/FirmwareUpdater/firmwareupdater.ini
+++ b/src/tools/FirmwareUpdater/firmwareupdater.ini
@@ -1,6 +1,7 @@
 [DRIVERS]
 CFW2_CAN "0"
 CFW2_CAN "1"
-ESD_CAN  "5"
-ESD_CAN  "6"
-ETH      "eth1"
+ESD_CAN "5"
+ESD_CAN "6"
+SOCKETCAN "can0"
+ETH "10.0.1.104:3333"
