[iKinGazeCtrl] removed limitation on eye tilt

--- a/app/gazeboCartesianControl/conf/iKinGazeCtrl.ini
+++ b/app/gazeboCartesianControl/conf/iKinGazeCtrl.ini
@@ -3,6 +3,10 @@ head_version          2.5
 neck_position_control on
 saccades              off
 
+[eye_tilt]
+min       -30.0
+max        30.0
+
 [cameras]
 context   gazeboCartesianControl
 file      icubSimEyes.ini
