Added command to go to a specific pose. Poses can be referenced using their tags as specified in the poses.ini. Usage over rpc: goto <pose_tag>

--- a/app/actionsRenderingEngine/conf/gazebo/config.ini
+++ b/app/actionsRenderingEngine/conf/gazebo/config.ini
@@ -39,6 +39,7 @@ table_height_tolerance              0.05
 net                                 network.ini
 exploration_poses                   exploration_poses.ini
 hand_sequences_file                 gazebo/hand_sequences.ini
+poses_file                          poses.ini
 stereo_kp                           0.007
 stereo_ki                           0.002
 stereo_kd                           0.0
