Added control on motion done in goto pose and parameter for position control speed

--- a/app/actionsRenderingEngine/conf/config.ini
+++ b/app/actionsRenderingEngine/conf/config.ini
@@ -30,6 +30,9 @@ dominant_eye                        left
 actions                             actions
 eyes_traj_time                      0.4
 neck_traj_time                      0.7
+arms_speed                          50.0
+torso_speed                         20.0
+head_speed                          50.0
 home_fixation_point                 (xyz -0.3 0.0 0.0)
 reach_side_orientation_original     (0.0 -0.707107 0.707107 3.141593)
 reach_above_displacement            (0.0 0.0 0.1)
@@ -39,6 +42,7 @@ go_up                               0.1
 table_height_tolerance              0.04
 net                                 network.ini
 exploration_poses                   exploration_poses.ini
+poses_file                          poses.ini
 hand_sequences_file                 hand_sequences.ini
 stereo_kp                           0.007
 stereo_ki                           0.002
