--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -1,11 +1,9 @@
 name: Packages creation
 
 on:
-  push:
-    tags:
-    - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-    # branches:
-    #   - master
+    release:
+      types:
+        - created
 
 jobs:
 # start job "preliminary-steps"
@@ -34,89 +32,19 @@ jobs:
         name: ICUB_PACKAGE_VERSION.txt
         path: ./ICUB_PACKAGE_VERSION.txt
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: true
-        prerelease: false
-
-    - name: create upload URL file
-      shell: bash
-      run: echo ${{ steps.create_release.outputs.upload_url }} > UPLOAD_URL.txt
-
-    - name: upload url file
-      uses: actions/upload-artifact@v2
-      with:
-        name: UPLOAD_URL.txt
-        path: ./UPLOAD_URL.txt
-
 # end job "preliminary-steps"
-# start job "normal-build"
-  normal-build:
-    name: "[packages:@${{ matrix.os }}]"
-    needs: [preliminary-steps]
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-18.04, ubuntu-20.04]
-    steps:
-
-    - name: install deps
-      shell: bash
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y git
-        sudo apt-get install -y lsb-release
-
-    - uses: actions/checkout@master
-
-    - uses: actions/download-artifact@v2
-      with:
-        name: ICUB_PACKAGE_VERSION.txt
-
-    - name: Generate icub-common metapackage
-      id: package_generation
-      shell: bash
-      run: |
-        chmod +x ./.ci/create_icub-common_deb.sh
-        export ICUB_PACKAGE_VERSION=$(cat ICUB_PACKAGE_VERSION.txt)
-        ./.ci/create_icub-common_deb.sh
-        echo ::set-output name=ICUB_PACKAGE_NAME::$( cat ICUB_PACKAGE_NAME.txt )
-
-    - uses: actions/download-artifact@v2
-      with:
-        name: UPLOAD_URL.txt
-
-    - name: read upload url
-      id: read_upload_url
-      shell: bash
-      run: echo ::set-output name=UPLOAD_URL::$( cat UPLOAD_URL.txt )
-
-    - name: Upload Release Asset
-      id: upload-release-asset
-      uses: shogo82148/actions-upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.read_upload_url.outputs.UPLOAD_URL }}
-        asset_path: ${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}
-        asset_content_type: application/vnd.debian.binary-package
-
-# end job "normal-build"
 # start job "docker-build"
   docker-build:
     name: '[packages:@${{ matrix.docker_image }}]'
-    needs: [normal-build]
+    needs: [preliminary-steps]
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         docker_image:
-#          - "ubuntu:bionic"
           - "debian:buster"
+          - "ubuntu:bionic"
+          - "ubuntu:focal"
     container:
       image: ${{ matrix.docker_image }}
     steps:
@@ -124,10 +52,14 @@ jobs:
     - name: install deps
       shell: bash
       run: |
-        apt-get update
-        apt-get install -y git
-        apt-get install -y lsb-release
-
+        apt update
+        apt install -y git
+        apt install -y lsb-release
+        apt install -y build-essential wget software-properties-common
+        apt install -y libsqlite3-dev qml-module-qt-labs-folderlistmodel qml-module-qt-labs-settings libopenni2-dev libi2c-dev libv4l-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev gstreamer1.0-plugins-good gstreamer1.0-plugins-bad gstreamer1.0-libav gstreamer1.0-tools libgraphviz-dev libqcustomplot-dev
+      env:
+        TZ: Italy/Rome
+        DEBIAN_FRONTEND: noninteractive
     - uses: actions/checkout@master
 
     - uses: actions/download-artifact@v2
@@ -135,29 +67,39 @@ jobs:
         name: ICUB_PACKAGE_VERSION.txt
 
     - name: Generate icub-common metapackage
-      id: package_generation
+      id: package_generation_icub-common
       shell: bash
       run: |
         chmod +x ./.ci/create_icub-common_deb.sh
         export ICUB_PACKAGE_VERSION=$(cat ICUB_PACKAGE_VERSION.txt)
         ./.ci/create_icub-common_deb.sh
-        echo ::set-output name=ICUB_PACKAGE_NAME::$( cat ICUB_PACKAGE_NAME.txt )
-
-    - uses: actions/download-artifact@v2
-      with:
-        name: UPLOAD_URL.txt
-
-    - name: read upload url
-      id: read_upload_url
+        echo ::set-output name=ICUB_COMMON_PACKAGE_NAME::$( cat ICUB_COMMON_PACKAGE_NAME.txt )
+    - name: Generate icub package
+      id: package_generation_icub-main
       shell: bash
-      run: echo ::set-output name=UPLOAD_URL::$( cat UPLOAD_URL.txt )
+      run: |
+        chmod +x ./.ci/create_icub-main_deb.sh
+        export ICUB_PACKAGE_VERSION=$(cat ICUB_PACKAGE_VERSION.txt)
+        ./.ci/create_icub-main_deb.sh
+        echo ::set-output name=ICUB_MAIN_PACKAGE_NAME::$( cat ICUB_MAIN_PACKAGE_NAME.txt )
 
-    - name: Upload Release Asset
-      id: upload-release-asset
-      uses: shogo82148/actions-upload-release-asset@v1
+    - name: Upload Release asset icub-common
+      uses: actions/upload-release-asset@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.read_upload_url.outputs.UPLOAD_URL }}
-        asset_path: ${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: ./${{ steps.package_generation_icub-common.outputs.ICUB_COMMON_PACKAGE_NAME }}
+        asset_name: ${{ steps.package_generation_icub-common.outputs.ICUB_COMMON_PACKAGE_NAME }}
+        asset_content_type: application/vnd.debian.binary-package
+    - name: Upload Release asset icub-main
+      uses: actions/upload-release-asset@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: ./${{ steps.package_generation_icub-main.outputs.ICUB_MAIN_PACKAGE_NAME }}
+        asset_name: ${{ steps.package_generation_icub-main.outputs.ICUB_MAIN_PACKAGE_NAME }}
         asset_content_type: application/vnd.debian.binary-package
 
 # end job "docker-build"
@@ -173,6 +115,5 @@ jobs:
         with:
           name: |
             ICUB_PACKAGE_VERSION.txt
-            UPLOAD_URL.txt
 
 # end job "clenup-steps"
