cleanup of file for iCub 3 skin GUI

--- a/app/skinGui/conf/skinGui/left_upperarm_V3.ini
+++ b/app/skinGui/conf/skinGui/left_upperarm_V3.ini
@@ -1,7 +1,7 @@
-cardid 8 9 10 11						
+cardid 13						
 CanDeviceName cfw2can						
 CanDeviceNum 7						
-robotPart left_arm
+robotPart left_upperarm
 width 500	
 height 400					
 						
