Improve dragonfly2 CMake scripts

--- a/src/libraries/icubmod/dragonfly2/CMakeLists.txt
+++ b/src/libraries/icubmod/dragonfly2/CMakeLists.txt
@@ -20,23 +20,29 @@ yarp_prepare_plugin(dragonfly2raw
                     EXTRA_CONFIG WRAPPER=grabberDual)
 
 if(NOT SKIP_dragonfly2)
-  find_package(DRAGONFLYAPI)
-  
+  if(WIN32)
+    find_package(DRAGONFLYAPI)
+  else()
+    # On Linux we do not need any dragonfly-specific API, just libdc1394
+    find_package(Libdc1394)
+    set(DRAGONFLYAPI_FOUND ${Libdc1394_FOUND})
+    set(DRAGONFLYAPI_INC_DIRS ${Libdc1394_INCLUDE_DIRS})
+    set(DRAGONFLYAPI_LIB ${Libdc1394_LIBRARIES})
+  endif()
+
   set(EXTRA_SOURCES)
   if(NOT DRAGONFLYAPI_FOUND)
 	  message(SEND_ERROR "dragonfly2: dragonfly api not found, turn off device")
   else()
     add_definitions(-D_REENTRANT)
 
+    include_directories(${DRAGONFLYAPI_INC_DIRS})
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/common)
     if(WIN32)
-	    include_directories(${DRAGONFLYAPI_INC_DIRS})
-	    include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-	    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/common)
 	    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/winnt)
 	    set(EXTRA_SOURCES winnt/FirewireCameraDC1394-DR2_2.h winnt/FirewireCameraDC1394-DR2_2.cpp)
     else()
-      include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-	    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/common)
 	    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/linux)
 	    set(EXTRA_SOURCES linux/FirewireCameraDC1394-DR2_2.h linux/FirewireCameraDC1394-DR2_2.cpp)
     endif()
