--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,10 +1,15 @@
-name: Bug Report
+name: 🐞 Bug Report
 description: File a bug report
 labels: "Type: Bug"
 body:
 - type: markdown
   attributes:
-    value: Before raising an issue, please search for existing issues to avoid creating duplicates.
+    value: |
+      ⚠
+      Verify first that your issue is not [already reported on GitHub][issue search].
+      Also test if the latest release and devel branch are affected too.
+
+      [issue search]: https://github.com/robotology/icub-main/search?q=is%3Aissue&type=issues
 - type: textarea
   attributes:
     label: Bug description
@@ -24,7 +29,7 @@ body:
 - type: textarea
   attributes:
     label: Example repository
-    description: If possible, please create an [minimal, reproducible example](https://stackoverflow.com/help/minimal-reproducible-example) of the bug and link it here in the bug report. To this end, you may consider using a [gist](https://gist.github.com).
+    description: If possible, please create an [minimal, reproducible example](https://stackoverflow.com/help/minimal-reproducible-example) of the bug and link it here in the bug report. To this end, you may also consider using a [gist](https://gist.github.com).
 - type: textarea
   attributes:
     label: Additional context
