--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,7 @@ blank_issues_enabled: false
 contact_links:
   - name: 👨🏻‍💻 Robotology Community
     url: https://github.com/robotology/community/discussions
-    about: For general discussions.
+    about: For general discussions
   - name: 🤖 Robot Maintenance
     url: https://github.com/robotology/icub-tech-support/issues
-    about: To get support for robot maintenance.
+    about: To get support for robot maintenance
