Update right upperarm v3 skingui config file

--- a/app/skinGui/conf/skinGui/right_upperarm_V3.ini
+++ b/app/skinGui/conf/skinGui/right_upperarm_V3.ini
@@ -7,9 +7,9 @@ height 600
 
 #             x     y     th   gain
 [SENSORS]
-triangle_10pad	8	52	-4.574374158		4	
+triangle_10pad	8	52	-4.574374158	0	        4
 triangle_10pad	9	36	4.663230149	59.99985969	4	
-triangle_10pad	6	36	23.13843876		4	
+triangle_10pad	6	36	23.13843876	0	        4
 triangle_10pad	7	52	32.37604307	-59.99985969	4	
 triangle_10pad	3	20	32.37604307	59.99985969	4	
 triangle_10pad	4	4	23.13843876	119.9997194	4	
