Address Win native problems w/ ambiguous symbol
See https://developercommunity.visualstudio.com/t/error-c2872-byte-ambiguous-symbol/93889#T-N859630

--- a/src/tools/skinManagerGui/CMakeLists.txt
+++ b/src/tools/skinManagerGui/CMakeLists.txt
@@ -36,6 +36,9 @@ add_executable(skinManagerGui WIN32    ${skinManagerGui_SRCS}
                                        ${skinManagerGui_HDRS}
                                        ${skinManagerGui_QRC_GEN_SRCS}
                                        ${skinManagerGui_UI_GEN_SRCS})
+if(WIN32)
+  target_compile_definitions(skinManagerGui PUBLIC _HAS_STD_BYTE=0)
+endif()
 target_link_libraries(skinManagerGui    YARP::YARP_OS
                                         YARP::YARP_init
                                         YARP::YARP_sig
