replaced deprecated YARP_OS with YARP_os

--- a/src/libraries/icubmod/imuFilter/CMakeLists.txt
+++ b/src/libraries/icubmod/imuFilter/CMakeLists.txt
@@ -14,7 +14,7 @@ if(ENABLE_imuFilter)
                             ImuFilter.h
                             PassThroughInertial.cpp
                             PassThroughInertial.h)
-  target_link_libraries(imuFilter PRIVATE YARP::YARP_OS
+  target_link_libraries(imuFilter PRIVATE YARP::YARP_os
                                           YARP::YARP_sig
                                           YARP::YARP_dev
                                           YARP::YARP_math
