--- a/src/unittest/CMakeLists.txt
+++ b/src/unittest/CMakeLists.txt
@@ -42,7 +42,7 @@ PRIVATE
 TARGET_LINK_LIBRARIES(ethResources)
 
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
-install(FILES ${CMAKE_CURRENT_LIST_DIR}/conf.xml DESTINATION ${CMAKE_INSTALL_BINDIR})
+install(FILES ${CMAKE_CURRENT_LIST_DIR}/conf.ini DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 #include(GoogleTest)
 #gtest_discover_tests(${PROJECT_NAME})
