--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -45,6 +45,7 @@ yarp_begin_plugin_library(icubmod QUIET)
   add_subdirectory(embObjAnalog)
   add_subdirectory(embObjStrain)
   add_subdirectory(embObjFTsensor)
+  add_subdirectory(embObjMultipleFTsensor)
   add_subdirectory(embObjMais)
   add_subdirectory(embObjMultiEnc)
   add_subdirectory(embObjInertials)
